--- a/css/stylesheetETU.css
+++ b/css/stylesheetETU.css
@@ -5,6 +5,11 @@ a
 	background-color: #757575;
 }
 
+.fill-heigth{
+    display: flex;
+    flex-wrap: wrap;
+    min-height: 100vh;
+}
 
 #Header{
     
@@ -15,4 +20,12 @@ a
 #Panel{
     background-color: #eeeeee;
     min-height: 100vh;
+	justify-content: space-around;
+}
+
+#Progression
+{
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
 }
