--- a/css/stylesheetETU.css
+++ b/css/stylesheetETU.css
@@ -1,8 +1,13 @@
 /* stylesheet etu*/
 
-a
+#BtnDeco
 {
 	background-color: #757575;
+}
+
+.btn-large
+{
+	background-color: #2fb0d4;
 }
 
 .fill-heigth{
