--- a/css/stylesheetCONNEXION.css
+++ b/css/stylesheetCONNEXION.css
@@ -20,4 +20,20 @@
 	width: 50vh;
 	background-color: white;
 	border: 1px solid;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+h2{
+	align-items: flex-start;
+	justify-content: flex-start;
+	font-size: 30px;
+	color: grey;
+	margin: 20px;
+}
+
+#formulaire{
+	
 }
