--- a/css/stylesheetCONNEXION.css
+++ b/css/stylesheetCONNEXION.css
@@ -11,29 +11,52 @@
 	min-height: 100vh;
 	background-color: #EEEEEE;
 	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-#container{
-	height: 55vh;
-	width: 50vh;
-	background-color: white;
-	border: 1px solid;
-	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	box-shadow: 0 0 3px #ccc;
+}
+
+#container_form{
+	height: 55vh;
+	width: 50vh;
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 h2{
-	align-items: flex-start;
-	justify-content: flex-start;
-	font-size: 30px;
+	font-size: 180%; /*25px*/
 	color: grey;
-	margin: 20px;
+	margin-left: 15px;
+	position: relative;
+	bottom: 15px;
 }
 
 #formulaire{
-	
+	margin: auto;
+	padding: 50px;
+}
+
+#bouton_connect{
+	margin: auto;
+	width: 35%;
+	padding:12px 0 12px 0;
+	font:bold 13px Arial;
+	color:#fff;
+	border-radius:2px;
+	border:none;
+	background-color: #2FB0D4;
+}
+
+input::placeholder {
+  color: grey;
+  opacity: 0.6;
+}
+
+input:focus {
+ background-color: #FEFF7F;
+ border: 1px solid #FF0000;
+ color:#000000;
 }
