--- a/css/stylesheetCONNEXION.css
+++ b/css/stylesheetCONNEXION.css
@@ -48,6 +48,7 @@ h2{
 	border-radius:2px;
 	border:none;
 	background-color: #2FB0D4;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
 }
 
 input::placeholder {
