--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,1 +1,53 @@
-// stylesheet commun
+/* stylesheet commun*/
+
+.fill-heigth{
+    display: flex;
+    flex-wrap: wrap;
+    min-height: 100vh;
+}
+
+#Panel{
+    background-color: #eeeeee;
+    min-height: 100vh;
+	justify-content: space-around;
+}
+
+#Panel div
+{
+    background-color: white;
+}
+
+#Header{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #2fb0d4;
+    min-height: 100vh;
+}
+
+#Header h3
+{
+    color: #757575 !important;
+}
+
+#BtnDeco
+{
+	background-color: #757575 !important;
+}
+
+#Progression div
+{
+    display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around !important;
+}
+
+.btn
+{
+	background-color: #2fb0d4;
+    display: block;
+}
+
+
+
