--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -52,5 +52,15 @@
     display: block;
 }
 
+#Formulaire
+{
+    display: flex;
+    margin-top: 10px !important;
+}
 
+#Formulaire .z-depth-2 {
+  flex-grow: 2; /* default 0 */
+  max-width: 100%;
+  padding-left: 10px;
+}
 
