--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,6 +21,8 @@
 #Header h3
 {
     color: #757575 !important;
+    font-size:4vw;
+    text-align:center;
 }
 
 #Panel{
@@ -37,6 +39,8 @@
 #BtnDeco
 {
 	background-color: #757575 !important;
+    font-size:1vw;
+    text-align:center;
 }
 
 #Progression div
