--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41,6 +41,8 @@
 	background-color: #757575 !important;
     font-size:1vw;
     text-align:center;
+    padding-top: 2px;
+    vertical-align: middle;
 }
 
 #Progression div
