--- a/css/stylesheetETU.css
+++ b/css/stylesheetETU.css
@@ -4,10 +4,17 @@
 {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-around !important;
 }
 
+.DispayList
+{
+	display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around !important;
+}
 
 
 
